base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-hello
  namespace: flask-hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-hello
  template:
    metadata:
      labels:
        app: flask-hello
    spec:
      containers:
      - name: flask-hello
        image: 624577703989.dkr.ecr.ap-northeast-1.amazonaws.com/hackathon:20251104070324
        ports:
        - containerPort: 5000
