base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-hello
  namespace: helloworld
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: flask-hello
